syntax = "proto3";

package pb;
option go_package = "../pb";

// 心跳, gateway 通知游戏服，每2秒发送
message PingRequest {
    int64 timestamp = 1; // 服务器时间戳
}


//gateway 转发给 游戏服的信息报文请求
message GameCommonRequest{
    string gameId = 1;
    string roomId = 2;
    string pid = 3;
    string uid = 4;
    string protoName = 5;
    int64 timestamp = 6;
    int64 sn = 7;
    bytes data = 8;
}


message GameCommonResponse{
    int32 code = 1;
    string msg = 2;
    int64 timestamp = 3;
    int64 sn = 4;
    string protoName = 5;
    bytes data = 6;
}




